--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                         The best gauge to determine how good a physical theory really is, is by looking at the predictions the theory provides and comparing the resulting numbers with real-world experiments. With regards to this measure, Quantum Field Theory (QFT) is probably the best physical theory there is to this date. Yet, a fully general mathematically rigorous formulation of (non-topological) QFT is missing. In this thesis we will study the functorial approach to QFT. More specifically, we will study the specific approach taken in arXiv:2011.01208 and arXiv:2111.01095 . In particular, arXiv:2111.01095 provides a classification theorem for smooth spaces of QFTs, referred to as the geometric cobordism hypothesis. The geometric cobordism hypothesis is a generalization of the topological cobordism hypothesis, which can be traced back to Baez and Dolan (1995), and was later rigorously formulated by Lurie in arXiv:0905.0465 . This work aims to accomplish two goals. The first of these is to provide a self-contained introduction to the somewhat intimidating realm of smooth functorial field theory. This is why the first six chapters of this thesis are devoted to the study of notions like simplicial homotopy theory, enriched category theory, model categories, &infin;-sheaves, &infin;-categories etc. The only prerequisites to be had in order to be able to follow the material is a good understanding of (ordinary) category theory (algebraic topology is helpful, but not needed). The second goal of this thesis is to provide a better understanding of the construction of smooth bordism &infin;-categories endowed with geometric structures as defined in arXiv:2011.01208. This is done by first providing the rigorous construction of these objects, and by then looking at some low-dimensional examples thereof. With that in hand, a smooth field theory with some prefixed geometric structure should then just be an &infin;-functor from the given smooth bordism &infin;-category to some &infin;-category of values. From there, we will consider smooth spaces of field theories with prefixed geometry and explain the geometric cobordism hypothesis, which, roughly put, states that such a space of field theories is equivalent to "morphisms" from the given geometric structure to the maximal &infin;-subgroupoid of fully dualisable objects of the target &infin;-category.
                     </p>
                     <div class="thesis-download">
-                        <a href="maths/Notes/Notes_GCH (1).pdf" class="file-link" download>
+                        <a href="Notes_GCH_1.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> Download Master Thesis (PDF)
                         </a>
                     </div>
@@ -328,7 +328,7 @@
                         Mathematical theories often, if not always, are motivated by looking closely at the real world. The first such example of a mathematical theory that should come to mind is, of course, calculus. Just as calculus was derived for the sole purpose of making sense of motion, acceleration, or more generally change, that is, calculus was invented in order to supply classical mechanics with the necessary mathematical tools, functional analysis was born from the depths of hell (or so some people might think) so as to furnish the quantum theorists with the long sought tools and give rigorous descriptions for quantum mechanics in general. One such description is the algebraic formulation of quantum mechanics, that is, the C*-algebraic approach. In this thesis we will derive the basics of the theory of C*-operator algebras. We will, however, not get into the physical theory that is quantum mechanics, as this work is intended to be purely mathematical. If one is interested in applying the theory to describe quantum mechanics see [11]. We will begin our journey by forging a suitable topology, called the weak*-topology, so as to lay the groundwork for Banach algebras. The theory of Banach algebras will be discussed in general at first, but then we will focus on the abelian case and introduce the celebrated Gel'fand transform. After having done so, we will devote ourselves to the study of C*-algebras and we will prove the first Gel'fand Naimark theorem, which roughly states that abelian C*-algebras are nothing more than continuous functions (that is up to *-isomorphism). Our journey then leads us to the derivation of the CFC (=Continuous Functional Calculus) in the setting of C*-algebras, an immensely important tool in functional analysis, especially when applied to spectral theory. By means of the CFC we are then able to give meaning to the notion of positivity of elements in a C*-algebra. After having done so, we will concern ourselves with certain linear functionals called states, so as to be able to derive one of the most iconic statements of the field; the GNS-construction (Gel'fand-Naimark-Segal). The GNS construction will enable us to prove the second Gel'fand-Naimark representation theorem, which roughly states that every C*-algebra is, up to *-isomorphism, just a subset of bounded linear operators on some Hilbert space, which will conclude our journey.
                     </p>
                     <div class="thesis-download">
-                        <a href="maths/Notes/BSc_Arbeit_Zahrer.pdf" class="file-link" download>
+                        <a href="BSc_Arbeit_Zahrer.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> Download Bachelor Thesis (PDF)
                         </a>
                     </div>
@@ -342,62 +342,62 @@
                 <div class="download-section">
                     <h3>Geometry and Physics</h3>
                     <div class="notes-category">
-                        <a href="maths/Notes/GR2.pdf" class="file-link" download>
+                        <a href="GR2.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> General Relativity Notes (GR2.pdf)
                         </a>
-                        <a href="maths/Notes/Ricci_Flow.pdf" class="file-link" download>
+                        <a href="Ricci_Flow.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> Ricci Flow (Ricci_Flow.pdf)
                         </a>
-                        <a href="maths/Notes/QFT (3).pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> Quantum Field Theory (QFT (3).pdf)
+                        <a href="QFT_3.pdf" class="file-link" download>
+                            <i class="fas fa-file-pdf"></i> Quantum Field Theory (QFT_3.pdf)
                         </a>
                     </div>
                 </div>
                 <div class="download-section">
                     <h3>Homotopy Coherent Mathematics</h3>
                     <div class="notes-category">
-                        <a href="maths/Notes/NotesHA (1).pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> Notes on Higher Algebra (NotesHA (1).pdf)
+                        <a href="NotesHA_1.pdf" class="file-link" download>
+                            <i class="fas fa-file-pdf"></i> Notes on Higher Algebra (NotesHA_1.pdf)
                         </a>
                     </div>
                 </div>
                 <div class="download-section">
                     <h3>Analysis</h3>
                     <div class="notes-category">
-                        <a href="maths/Notes/PDE_44_47_Zahrer.pdf" class="file-link" download>
+                        <a href="PDE_44_47_Zahrer.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> PDE Notes: Sections 44-47 (PDE_44_47_Zahrer.pdf)
                         </a>
-                        <a href="maths/Notes/PDE_48_51_Zahrer.pdf" class="file-link" download>
+                        <a href="PDE_48_51_Zahrer.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> PDE Notes: Sections 48-51 (PDE_48_51_Zahrer.pdf)
                         </a>
-                        <a href="maths/Notes/PDE_40_43_Zahrer.pdf" class="file-link" download>
+                        <a href="PDE_40_43_Zahrer.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> PDE Notes: Sections 40-43 (PDE_40_43_Zahrer.pdf)
                         </a>
-                        <a href="maths/Notes/PDE_36_39_Zahrer.pdf" class="file-link" download>
+                        <a href="PDE_36_39_Zahrer.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> PDE Notes: Sections 36-39 (PDE_36_39_Zahrer.pdf)
                         </a>
-                        <a href="maths/Notes/PDE_32_35_Zahrer.pdf" class="file-link" download>
+                        <a href="PDE_32_35_Zahrer.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> PDE Notes: Sections 32-35 (PDE_32_35_Zahrer.pdf)
                         </a>
-                        <a href="maths/Notes/PDE_28_31_Zahrer.pdf" class="file-link" download>
+                        <a href="PDE_28_31_Zahrer.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> PDE Notes: Sections 28-31 (PDE_28_31_Zahrer.pdf)
                         </a>
-                        <a href="maths/Notes/PDE_21_27_Zahrer.pdf" class="file-link" download>
+                        <a href="PDE_21_27_Zahrer.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> PDE Notes: Sections 21-27 (PDE_21_27_Zahrer.pdf)
                         </a>
-                        <a href="maths/Notes/PDE_17_20_Zahrer.pdf" class="file-link" download>
+                        <a href="PDE_17_20_Zahrer.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> PDE Notes: Sections 17-20 (PDE_17_20_Zahrer.pdf)
                         </a>
-                        <a href="maths/Notes/PDEs_Exercise43.pdf" class="file-link" download>
+                        <a href="PDEs_Exercise43.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> PDE Exercise 43 (PDEs_Exercise43.pdf)
                         </a>
-                        <a href="maths/Notes/VDSP_finalPaper_Zahrer.pdf" class="file-link" download>
+                        <a href="VDSP_finalPaper_Zahrer.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> Variable Dimension Stochastic Processes (VDSP_finalPaper_Zahrer.pdf)
                         </a>
-                        <a href="maths/Notes/Locally_Convex_Spaces.pdf" class="file-link" download>
+                        <a href="Locally_Convex_Spaces.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> Locally Convex Spaces (Locally_Convex_Spaces.pdf)
                         </a>
-                        <a href="maths/Notes/Zahrer_AusarbeitungCxAnalysis_finalvs.pdf" class="file-link" download>
+                        <a href="Zahrer_AusarbeitungCxAnalysis_finalvs.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> Complex Analysis (Zahrer_AusarbeitungCxAnalysis_finalvs.pdf)
                         </a>
                     </div>
@@ -405,13 +405,13 @@
                 <div class="download-section">
                     <h3>Logic</h3>
                     <div class="notes-category">
-                        <a href="maths/Notes/Logic_Task1_Zahrer.pdf" class="file-link" download>
+                        <a href="Logic_Task1_Zahrer.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> Logic: Task 1 (Logic_Task1_Zahrer.pdf)
                         </a>
-                        <a href="maths/Notes/Logic_Task2_Zahrer.pdf" class="file-link" download>
+                        <a href="Logic_Task2_Zahrer.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> Logic: Task 2 (Logic_Task2_Zahrer.pdf)
                         </a>
-                        <a href="maths/Notes/Logic_Task3_Zahrer.pdf" class="file-link" download>
+                        <a href="Logic_Task3_Zahrer.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> Logic: Task 3 (Logic_Task3_Zahrer.pdf)
                         </a>
                     </div>
