--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                     </div>
                 </div>
                 <div class="download-section">
-                    <h3>Homotopy Coherent Mathematics</h3>
+                    <h3>Homotopy Coherent Stuff</h3>
                     <div class="notes-category">
                         <a href="NotesHA_1.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> Notes on Higher Algebra (NotesHA_1.pdf)
@@ -364,29 +364,6 @@
                 <div class="download-section">
                     <h3>Analysis</h3>
                     <div class="notes-category">
-                        <a href="PDE_44_47_Zahrer.pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> PDE Notes: Sections 44-47 (PDE_44_47_Zahrer.pdf)
-                        </a>
-                        <a href="PDE_48_51_Zahrer.pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> PDE Notes: Sections 48-51 (PDE_48_51_Zahrer.pdf)
-                        </a>
-                        <a href="PDE_40_43_Zahrer.pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> PDE Notes: Sections 40-43 (PDE_40_43_Zahrer.pdf)
-                        </a>
-                        <a href="PDE_36_39_Zahrer.pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> PDE Notes: Sections 36-39 (PDE_36_39_Zahrer.pdf)
-                        </a>
-                        <a href="PDE_32_35_Zahrer.pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> PDE Notes: Sections 32-35 (PDE_32_35_Zahrer.pdf)
-                        </a>
-                        <a href="PDE_28_31_Zahrer.pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> PDE Notes: Sections 28-31 (PDE_28_31_Zahrer.pdf)
-                        </a>
-                        <a href="PDE_21_27_Zahrer.pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> PDE Notes: Sections 21-27 (PDE_21_27_Zahrer.pdf)
-                        </a>
-                        <a href="PDE_17_20_Zahrer.pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> PDE Notes: Sections 17-20 (PDE_17_20_Zahrer.pdf)
                         </a>
                         <a href="PDEs_Exercise43.pdf" class="file-link" download>
                             <i class="fas fa-file-pdf"></i> PDE Exercise 43 (PDEs_Exercise43.pdf)
