--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@
                         The best gauge to determine how good a physical theory really is, is by looking at the predictions the theory provides and comparing the resulting numbers with real-world experiments. With regards to this measure, Quantum Field Theory (QFT) is probably the best physical theory there is to this date. Yet, a fully general mathematically rigorous formulation of (non-topological) QFT is missing. In this thesis we will study the functorial approach to QFT. More specifically, we will study the specific approach taken in arXiv:2011.01208 and arXiv:2111.01095 . In particular, arXiv:2111.01095 provides a classification theorem for smooth spaces of QFTs, referred to as the geometric cobordism hypothesis. The geometric cobordism hypothesis is a generalization of the topological cobordism hypothesis, which can be traced back to Baez and Dolan (1995), and was later rigorously formulated by Lurie in arXiv:0905.0465 . This work aims to accomplish two goals. The first of these is to provide a self-contained introduction to the somewhat intimidating realm of smooth functorial field theory. This is why the first six chapters of this thesis are devoted to the study of notions like simplicial homotopy theory, enriched category theory, model categories, &infin;-sheaves, &infin;-categories etc. The only prerequisites to be had in order to be able to follow the material is a good understanding of (ordinary) category theory (algebraic topology is helpful, but not needed). The second goal of this thesis is to provide a better understanding of the construction of smooth bordism &infin;-categories endowed with geometric structures as defined in arXiv:2011.01208. This is done by first providing the rigorous construction of these objects, and by then looking at some low-dimensional examples thereof. With that in hand, a smooth field theory with some prefixed geometric structure should then just be an &infin;-functor from the given smooth bordism &infin;-category to some &infin;-category of values. From there, we will consider smooth spaces of field theories with prefixed geometry and explain the geometric cobordism hypothesis, which, roughly put, states that such a space of field theories is equivalent to "morphisms" from the given geometric structure to the maximal &infin;-subgroupoid of fully dualisable objects of the target &infin;-category.
                     </p>
                     <div class="thesis-download">
-                        <a href="Notes_GCH_ (1).pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> Download Master Thesis (PDF)
+                        <a href="Notes_GCH (1).pdf" class="file-link" download>
+                            <i class="fas fa-file-pdf"></i> Download Master Thesis
                         </a>
                     </div>
                 </div>
@@ -329,7 +329,7 @@
                     </p>
                     <div class="thesis-download">
                         <a href="BSc_Arbeit_Zahrer.pdf" class="file-link" download>
-                            <i class="fas fa-file-pdf"></i> Download Bachelor Thesis (PDF)
+                            <i class="fas fa-file-pdf"></i> Download Bachelor Thesis
                         </a>
                     </div>
                 </div>
