--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 <body>
     <div id="background-video">
         <video autoplay muted loop>
-            <source src="mountain-loop.mp4" type="video/mp4">
+            <source src="lava2 (1) (1).mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
