--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
     <header>
         <div class="header-video">
             <video autoplay muted loop>
-                <source src="vienna.mp4" type="video/mp4">
+                <source src="snowyday.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
